# magenda

./: .gitignore  LICENSE  Magenda.spec  README.md  manifest.json  pyproject.toml
.github/workflows/: build.yml  release.yml
assets/: template.docx
scripts/: build_fonts.py  build_mcpb.sh  entitlements.plist  manual_test.py
src/: _entry.py
src/magenda/: agenda_store.py  calendar_math.py  font_setup.py  paths.py  server.py  text_fit.py  xml_ops.py
src/magenda/tools/: __init__.py  _common.py  add_daily_schedule.py  add_meeting.py  add_tasks.py  adjust_dates.py  create_agenda.py  render.py
tests/: test_calendar_math.py  test_tools_end_to_end.py  test_xml_ops.py
